--- a/aws/logs_monitoring/.dockerignore
+++ b/aws/logs_monitoring/.dockerignore
@@ -1,13 +1,3 @@
 *
-!lambda_function.py
-!enhanced_lambda_metrics.py
-!logs.py
-!parsing.py
-!cache.py
-!telemetry.py
-!settings.py
 !setup.py
-!template.yaml
-!trace_forwarder/bin
-!trace_forwarder/__init__.py
-!trace_forwarder/connection.py
+!datadog_forwarder/
